Changes for 1.8.1.1
* Fixed MapCreator so that it will properly send the map folder to the utility programs. (veqryn)

* Allowing host to wait up to 150 seconds when starting a game for all clients to report in as good, and wait up to 30 seconds for observers joining after game has started. (veqryn) 

* Fixing two memory leaks that allowed AI's and GameData to stay in memory after exiting back to main screen. (veqryn)

* Creating a threaded version of the BattleCalculator, to speed up results. (redrum & veqryn)

* Creating a logging window for ProAI so that players can watch the log. (redrum)


Changes for 1.8.0.3
* Created new step property option, "repairPlayers", which will allow a player to repair the units owned by a different player. (veqryn)

* Fixed issue where your move phase was skipped if the only unit you owned was a land unit in a transport. (veqryn)

* Allowing land units to receive repairing and bonus movement from neighboring sea zone sea units. (veqryn)

* Units on transports no longer are able to repair other units, allow scrambling, or give movement to other units. (veqryn)

* Fixed issue where a unit that dies from rockets, still participates in subsequent strategic bombing battle. (veqryn)

* Fixed issue with allied land units in friendly transports and allied air on friendly carriers losing their movement when their transport/carrier moved. (veqryn)

* Fixing issue with allied land units starting game loaded on friendly transports, could not offload until at least one non-combat phase had passed. (veqryn)

* Deleted global game option property, "Allied Air Dependents", and replaced with its inverse, "Allied Air Independent". (veqryn)

* Added menu option under 'Export" menu, called "Export Unit Charts", which will create an html document showing all units in the game and their properties and cost. (veqryn)
