@@ -84,6 +84,8 @@ public class GameRunner2
 	// other stuff
 	public static final String TRIPLEA_DO_NOT_CHECK_FOR_UPDATES = "triplea.doNotCheckForUpdates";
 	public static final String TRIPLEA_MEMORY_SET = "triplea.memory.set"; // has the memory been manually set or not?
+	public static final String TRIPLEA_SERVER_START_GAME_SYNC_WAIT_TIME = "triplea.server.startGameSyncWaitTime";
+	public static final String TRIPLEA_SERVER_OBSERVER_JOIN_WAIT_TIME = "triplea.server.observerJoinWaitTime";
 	// non-commandline-argument-properties (for preferences)
 	// first time we've run this version of triplea?
 	private static final String TRIPLEA_FIRST_TIME_THIS_VERSION_PROPERTY = "triplea.firstTimeThisVersion" + EngineVersion.VERSION.toString();
@@ -96,6 +98,8 @@ public class GameRunner2
 	
 	private static WaitWindow s_waitWindow;
 	private static CountDownLatch s_countDownLatch;
+	public static final int DEFAULT_SERVER_START_GAME_SYNCE_WAIT_TIME = 150;
+	public static final int DEFAULT_SERVER_OBSERVER_JOIN_WAIT_TIME = 30;
 	
 	
 	public static enum ProxyChoice
@@ -722,6 +726,60 @@ public class GameRunner2
 	{
 		final Preferences pref = Preferences.userNodeForPackage(GameRunner2.class);
 		pref.putBoolean(DELAYED_PARSING, delayedParsing);
+		try
+		{
+			pref.sync();
+		} catch (final BackingStoreException e)
+		{
+			e.printStackTrace();
+		}
+	}
+	
+	public static int getServerStartGameSyncWaitTime()
+	{
+		return Math.max(DEFAULT_SERVER_START_GAME_SYNCE_WAIT_TIME,
+					Preferences.userNodeForPackage(GameRunner2.class).getInt(TRIPLEA_SERVER_START_GAME_SYNC_WAIT_TIME, DEFAULT_SERVER_START_GAME_SYNCE_WAIT_TIME));
+	}
+	
+	public static void resetServerStartGameSyncWaitTime()
+	{
+		setServerStartGameSyncWaitTime(DEFAULT_SERVER_START_GAME_SYNCE_WAIT_TIME);
+	}
+	
+	public static void setServerStartGameSyncWaitTime(final int seconds)
+	{
+		final int wait = Math.max(DEFAULT_SERVER_START_GAME_SYNCE_WAIT_TIME, seconds);
+		if (wait == getServerStartGameSyncWaitTime())
+			return;
+		final Preferences pref = Preferences.userNodeForPackage(GameRunner2.class);
+		pref.putInt(TRIPLEA_SERVER_START_GAME_SYNC_WAIT_TIME, wait);
+		try
+		{
+			pref.sync();
+		} catch (final BackingStoreException e)
+		{
+			e.printStackTrace();
+		}
+	}
+	
+	public static int getServerObserverJoinWaitTime()
+	{
+		return Math.max(DEFAULT_SERVER_OBSERVER_JOIN_WAIT_TIME, Preferences.userNodeForPackage(GameRunner2.class)
+					.getInt(TRIPLEA_SERVER_OBSERVER_JOIN_WAIT_TIME, DEFAULT_SERVER_OBSERVER_JOIN_WAIT_TIME));
+	}
+	
+	public static void resetServerObserverJoinWaitTime()
+	{
+		setServerObserverJoinWaitTime(DEFAULT_SERVER_OBSERVER_JOIN_WAIT_TIME);
+	}
+	
+	public static void setServerObserverJoinWaitTime(final int seconds)
+	{
+		final int wait = Math.max(DEFAULT_SERVER_OBSERVER_JOIN_WAIT_TIME, seconds);
+		if (wait == getServerObserverJoinWaitTime())
+			return;
+		final Preferences pref = Preferences.userNodeForPackage(GameRunner2.class);
+		pref.putInt(TRIPLEA_SERVER_OBSERVER_JOIN_WAIT_TIME, Math.max(DEFAULT_SERVER_OBSERVER_JOIN_WAIT_TIME, seconds));
 		try
 		{
 			pref.sync();
